[gd_scene load_steps=13 format=3 uid="uid://donhenh45sal8"]

[ext_resource type="Script" uid="uid://c7yqn5ulqbve2" path="res://scripts/ui/transformer_item.gd" id="1_t18cr"]
[ext_resource type="Resource" uid="uid://y353udod5p7m" path="res://scenes/transformer/c_transformer/c_transformer.tres" id="2_tcgv8"]
[ext_resource type="FontFile" uid="uid://c6h3we4j2dvbf" path="res://fonts/GravityBold8.ttf" id="3_f25kx"]
[ext_resource type="Texture2D" uid="uid://bmt62u4mtyt2x" path="res://sprites/tileset2.png" id="4_f25kx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f25kx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_thb85"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mafmx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xgcwx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l8m1a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tbg13"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x3q6d"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.23137255, 0.23921569, 0.5294118, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing = false

[sub_resource type="AtlasTexture" id="AtlasTexture_thb85"]
atlas = ExtResource("4_f25kx")
region = Rect2(192, 8, 16, 24)

[node name="TransformerItem" type="PanelContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_f25kx")
script = ExtResource("1_t18cr")
transformer_resource = ExtResource("2_tcgv8")

[node name="PlacementButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_thb85")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mafmx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xgcwx")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_l8m1a")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tbg13")

[node name="HoverName" type="Label" parent="PlacementButton"]
unique_name_in_owner = true
z_index = 1
layout_mode = 0
offset_top = -24.0
offset_right = 72.0
theme_override_fonts/font = ExtResource("3_f25kx")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_x3q6d")
text = "INFO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="VBoxContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(32, 32)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
tooltip_auto_translate_mode = 0
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
focus_behavior_recursive = 0
mouse_filter = 2
mouse_behavior_recursive = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
accessibility_name = ""
accessibility_description = ""
accessibility_live = 0
accessibility_controls_nodes = Array[NodePath]([])
accessibility_described_by_nodes = Array[NodePath]([])
accessibility_labeled_by_nodes = Array[NodePath]([])
accessibility_flow_to_nodes = Array[NodePath]([])
theme = null
theme_type_variation = &""
texture = SubResource("AtlasTexture_thb85")
expand_mode = 3
stretch_mode = 5
flip_h = false
flip_v = false
script = null
